# docs/swagger.yaml
@@ -1,54 +1,13 @@
 basePath: /
 definitions:
-  model.Address:
-    properties:
-      city:
-        example: Metropolis
-        type: string
-      district:
-        example: Central
-        type: string
-      lane:
-        example: 1234 Elm St
-        type: string
-      pincode:
-        example: 123456
-        type: integer
-      state:
-        example: NY
-        type: string
-      village:
-        example: Springfield
-        type: string
-    required:
-    - city
-    - district
-    - pincode
-    - state
-    type: object
-  model.Name:
-    properties:
-      first_name:
-        example: John
-        type: string
-      last_name:
-        example: Smith
-        type: string
-      middle_name:
-        example: Doe
-        type: string
-    required:
-    - first_name
-    - last_name
-    - middle_name
-    type: object
   model.User:
     properties:
       active:
         example: true
         type: boolean
-      address:
-        $ref: '#/definitions/model.Address'
+      city:
+        example: Metropolis
+        type: string
       created_at:
         type: string
       created_by:
@@ -58,27 +17,53 @@ definitions:
         type: string
       deleted_by:
         type: string
+      district:
+        example: Central
+        type: string
       email:
         example: vishal
         type: string
-      id:
-        example: ""
+      first_name:
+        example: John
         type: string
-      name:
-        $ref: '#/definitions/model.Name'
+      id:
+        type: string
+      lane:
+        example: 1234 Elm St
+        type: string
+      last_name:
+        example: Smith
+        type: string
+      middle_name:
+        example: Doe
+        type: string
       password:
         example: password
+        type: string
+      pincode:
+        example: 123456
+        type: integer
+      state:
+        example: NY
         type: string
       updated_at:
         type: string
       updated_by:
         type: string
+      village:
+        example: Springfield
+        type: string
     required:
-    - address
+    - city
     - created_by
+    - district
     - email
-    - name
+    - first_name
+    - last_name
+    - middle_name
     - password
+    - pincode
+    - state
     type: object
 host: localhost:8000
 info:
@@ -147,6 +132,139 @@ paths:
           schema:
             $ref: '#/definitions/model.User'
       summary: Create a user
+      tags:
+      - users
+  /user/delete/{id}:
+    delete:
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses: {}
+      summary: Delete a user
+      tags:
+      - users
+  /user/filter:
+    get:
+      parameters:
+      - description: email
+        in: query
+        name: email
+        type: string
+      - description: id
+        in: query
+        name: id
+        type: string
+      - description: password
+        in: query
+        name: password
+        type: string
+      - description: active
+        in: query
+        name: active
+        type: boolean
+      - description: created_by
+        in: query
+        name: created_by
+        type: string
+      - description: updated_by
+        in: query
+        name: updated_by
+        type: string
+      - description: first_name
+        in: query
+        name: first_name
+        type: string
+      - description: middle_name
+        in: query
+        name: middle_name
+        type: string
+      - description: last_name
+        in: query
+        name: last_name
+        type: string
+      - description: lane
+        in: query
+        name: lane
+        type: string
+      - description: village
+        in: query
+        name: village
+        type: string
+      - description: city
+        in: query
+        name: city
+        type: string
+      - description: district
+        in: query
+        name: district
+        type: string
+      - description: pincode
+        in: query
+        name: pincode
+        type: integer
+      - description: state
+        in: query
+        name: state
+        type: string
+      - description: start date
+        in: query
+        name: start_date
+        type: string
+      - description: end date
+        in: query
+        name: end_date
+        type: string
+      - description: 'Page number (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Number of results per page (default: 10)'
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.User'
+            type: array
+      security:
+      - ApiKeyAuth: []
+      summary: Get all users based on given filters
+      tags:
+      - users
+  /user/update/{id}:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User object
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+      security:
+      - ApiKeyAuth: []
+      summary: Update a user
       tags:
       - users
 schemes:
