# model/constant.go
@@ -25,9 +25,32 @@ var (
 )
 
 var (
-	NewServer  = "new-server"
-	NewStore   = "new-store"
-	CreateUser = "create-user"
-	GetUser    = "get-user"
-	GetUsers   = "get-users"
+	NewServer = "new-server"
+	NewStore  = "new-store"
+
+	CreateUser      = "create-user"
+	GetUser         = "get-user"
+	GetUsers        = "get-users"
+	GetUserByFilter = "get-user-by-filter"
+	UpdateUser      = "update-user"
+	DeleteUser      = "delete-user"
+)
+
+// General
+var (
+	Value    = "value"
+	Email    = "email"
+	Password = "password"
+	UserID   = "userID"
+	Expire   = "exp"
+
+	Authorization = "X-Token"
+
+	DSN = "host=localhost user=iot password=iot dbname=homeautomation port=5432 sslmode=disable"
+
+	DataPerPage = "limit"
+	PageNumber  = "page"
+	StartDate   = "start_date"
+	EndDate     = "end_date"
+	TimeLayout  = "2006-01-02 15:04:05.000 -0700"
 )
